Checkbox alignment for multiline tasks, menu focus layout adjusted.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -42,7 +42,7 @@
 
 // 1. Set initial max-height for item to make max-height animation work in WebKit browsers.
 .animate-list-item-leave {
-  max-height: @grid-vertical; // [1]
+  max-height: @grid-vertical * 1.5; // [1]
 }
 
 .animate-list-item-leave.tall {
