Fixed datepicker nudge, narrow arrow to contexts

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -195,6 +195,9 @@ Navigation texts
 
 .large.text-navigation-forward:after {
   font-size: @size-icon-arrow-large;
+  content: @icon-arrow-right-narrow;
+  vertical-align: middle;
+  vertical-align: -2%;
 }
 
 /*
