--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -37,7 +37,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
   line-height: @height-heading;
   vertical-align: middle;
   margin-top: @margin-top-heading-justified;
-  padding-bottom: 0;
+  margin-bottom: 6px;
 }
 
 .datepicker-day {
