--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -17,6 +17,7 @@ Grid constants
 @grid-horizontal: 28px;
 @grid-vertical: 44px;
 @grid-vertical-half: 22px;
+@grid-vertical-small: 16px;
 
 /*
 Text colors
