Beginnings of onboarding

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -629,6 +629,14 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   margin-bottom: 0;
 }
 
+.group-heading.instruction {
+  margin-top: @grid-vertical * 1.5;
+}
+
+.group-heading .highlighted {
+  color: @color-text-highlighted;
+}
+
 /*
 `.group-error` groups together multiple error messages.
 */
