More onboarding work

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -16,8 +16,9 @@ Grid constants
 
 @grid-horizontal: 28px;
 @grid-vertical: 44px;
+@grid-vertical-medium: 30px; // ingress
 @grid-vertical-half: 22px;
-@grid-vertical-small: 16px;
+@grid-vertical-small: 16px; // multiline details
 
 /*
 Text colors
