--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -64,7 +64,8 @@ are `button` elements that have a logo as `label`.
 }
 
 .btn-action {
-  .set-font-ingress();
+  font-size: @size-font-btn;
+  .set-font-bold();
   color: white;
   background-color: transparent;
   & > .text-btn {
