--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -423,6 +423,11 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
   p:not(:first-child) {
     padding-top: @grid-vertical;
   }
+
+  .textgroup-ingress {
+    padding-top: @grid-vertical;
+    line-height: @grid-vertical-medium;
+  }
 }
 
 /*
