Working onboarding flow, actions around onboarding not yet disabled

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -125,3 +125,8 @@ input[type="checkbox"]:checked + label:before {
   color: @color-text-highlighted;
   content: @icon-selection-checked;
 }
+
+
+.input-separate {
+  margin-top: @grid-vertical-half;
+}
