--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -428,6 +428,16 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
     padding-top: @grid-vertical;
     line-height: @grid-vertical-medium;
   }
+  .text-normal {
+    padding-top: @grid-vertical;
+  }
+}
+
+/*
+Use `.group-instruction-input` to create an instruction block below an input field.
+*/
+.group-instruction-input {
+  padding-top: @grid-vertical-small;
 }
 
 /*
