Added clamping to email in menu

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -104,7 +104,9 @@ Menu
     }
   }
   a:first-child {
-    padding-top: 6px;
+    padding-top: 15px;
+    line-height: @grid-vertical;
+    padding-bottom: 15px;
   }
 }
 
