dynamic group-heading setting according to viewport

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -629,7 +629,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 // Heading is long, multiple lines need smaller spacing, so the method above does not work
 // 1. Match 88 pixels with this, to make this be the same as the above for consistent look and feel
 .group-heading {
-  padding-top: @grid-vertical-half + 3px; // [1]
+  padding-top: 2vh; // one vh = one percent of viewport
   line-height: @grid-vertical;
   padding-bottom: @grid-vertical-half + 3px; // [1]
 }
