group-heading fix

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -650,6 +650,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 
 .group-heading.instruction {
   margin-top: @grid-vertical * 1.5;
+  padding-top: 2vh;
 }
 
 .group-heading .highlighted {
