add new task: checkbox now stays at top with multiline task name

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -605,6 +605,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   height: auto;
   .group-mixed--left, .group-mixed--middle, .group-mixed--right {
     height: auto;
+    line-height: inherit;
     vertical-align: top;
   }
   .group-mixed--middle {
