--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -94,3 +94,8 @@ Note Heading
   line-height: @grid-vertical-half;
   margin-bottom: 5px;
 }
+/*
+*/
+.link-disable {
+  pointer-events: none !important;
+}
