Added onboarding for focus and inbox

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -432,6 +432,10 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
     padding-top: @grid-vertical;
     line-height: @grid-vertical-medium;
   }
+
+  .textgroup-ingress.last {
+    padding-top: @grid-vertical-half;
+  }
   .text-normal {
     padding-top: @grid-vertical;
   }
