--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -66,6 +66,9 @@ h1, h2, h3, h4 {
   margin-top: 0;    // [1]
   margin-bottom: 0; // [1]
   .set-font-bold;
+  span {
+    .set-font-bold;
+  }
 }
 
 h1 {
@@ -83,6 +86,9 @@ h2 {
 .textgroup-ingress {
   font-size: @size-font-ingress;
   .set-font-bold;
+  span {
+    .set-font-bold;
+  }
 }
 
 /*
