Fixed onboarding workflow

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -446,6 +446,7 @@ Use `.group-instruction-input` to create an instruction block below an input fie
 */
 .group-instruction-input {
   padding-top: @grid-vertical-small;
+  padding-bottom: @grid-vertical-small;
 }
 
 /*
