Changed to using system font on each platform: Helvetica Neue on iOS, Roboto on Android and Segoe UI on windows. No more need for @font-face things.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -16,8 +16,9 @@ Fonts in use:
 (Bold letters use HelveticaNeueLT-Roman instead of HelveticaNeueLTStd-Lt.)
 */
 
-@font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'HelveticaNeue', 'Helvetica Neue',  'Arial', 'Helvetica', 'sans-serif';
-@font-family-bold: 'HelveticaNeue', 'Helvetica Neue',  'HelveticaNeueLT-Roman', 'Arial', 'Helvetica', 'sans-serif';
+@font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeue',
+              'Helvetica Neue',  'Segoe UI Light', 'Segoe UI', 'sans-serif-light', 'sans-serif';
+@font-family-bold: 'HelveticaNeue', 'Helvetica Neue',  'Segoe UI Bold', 'Segoe UI', 'sans-serif';
 
 @size-font-jumbotron: 59px;
 @size-font-large: 48px;
@@ -31,6 +32,7 @@ Fonts in use:
 
 * {
   font-family: @font-family;
+  font-weight: 300;
 }
 
 html {
