--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -67,8 +67,7 @@ Font mixins.
 h1, h2, h3, h4 {
   margin-top: 0;    // [1]
   margin-bottom: 0; // [1]
-  .set-font-bold;
-  span {
+  &, span, a > span {
     .set-font-bold;
   }
 }
@@ -87,8 +86,7 @@ h2 {
 
 .textgroup-ingress {
   font-size: @size-font-ingress;
-  .set-font-bold;
-  span {
+  &, span {
     .set-font-bold;
   }
 }
