Keywords in note editor. NOTE: Actual saving is not working yet!

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -251,6 +251,14 @@ Search results (omnibar, deleted)
 }
 
 /*
+Keywords
+*/
+
+.text-keyword {
+  font-size: @size-font-small;
+}
+
+/*
 Icon texts
 */
 
