--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -43,6 +43,7 @@ Background colors
 @color-background-editor-inactive: #dadada;
 @color-background-toaster: #c1c1c1;
 @color-background-highlighted: #c1c1c1;
+@color-background-text-highlighted: #d0E7f8;
 @color-background-btn-inactive: #919191;
 @color-background-btn-active: #0f82fe;
 @color-background-btn-pressed: #0171ea;
