Leave date label visible when calendar is open. Moved clear date button from calendar navigation to date label.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -245,17 +245,8 @@ TODO: Example needed
   color: @color-text-downplayed;
 }
 
-// 1. Set height to match height of elements in .pika-title.
-// 2. Float clear button to the right of .pika-title which is rendered by Pikaday.js.
-// TODO: align with .pika-title
-.pikaday-clear {
-  height: @grid-vertical; // [1]
-  float: right; // [2]
-}
-
-// 1. Make room for .pikaday-clear.
+// 1. Make room for title.
 //    NOTE: Make sure that layout does not break if setting width different than 65%.
-// TODO: align with .pika-clear
 .pika-title {
   height: @grid-vertical;
   width: 65%; // [1]
