Fixed iPhone4 log in / sign up screens, added smallDeviceHeight variable for height less than 500px (iPhone4 has 480)

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -671,6 +671,12 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   padding-bottom: @grid-vertical-half + 3px; // [1]
 }
 
+.height-small .group-heading:not(.justified){
+  padding-top: 5px;
+  padding-bottom: 10px;
+  font-size: @size-font-not-so-large;
+}
+
 @margin-top-heading-justified: -12px;
 // Justify whitespace between toolbar and content
 .group-heading.justified {
