Clamp task title into two rows when calendar is open in editor. Set font color gray in list picker etc. labels/placeholders.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -159,6 +159,10 @@ Use `.text-details` to separate details from body text.
   font-size: @size-font-medium;
 }
 
+.text-downplayed {
+  color: @color-text-downplayed;
+}
+
 /*
 Navigation texts
 */
